--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .App-logo {
@@ -28,8 +30,40 @@
   color: #61dafb;
 }
 
+.full-application {
+  width: 70%;
+  margin-top: 4rem !important;
+  padding: 4rem;
+  display: flex !important;
+  justify-content: center;
+  align-items: center !important;
+}
 
-.answer{
+.main-title {
+  margin-bottom: 4.5rem;
+}
+.single-question {
+  width: 90%;
+  margin-top: 4 !important;
+ 
+  display: flex;
+  justify-content: flex-start;
+  align-items: start;
+  flex-direction: column;
+}
+.fixed-box {
+  display: flex;
+  width: 80%;
+  flex-direction: column;
+}
+.answer-option-box {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 90%;
+  margin-left: 1.5rem;
+}
+.answer {
   border: solid 1px #313438;
   padding: 1.5rem;
   display: flex;
@@ -38,35 +72,64 @@
   align-items: center;
 }
 .results-box {
-  width: 80%;
-  align-items: start;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
-  margin: 12rem;
-  margin-left: 6rem;
+
+  margin-top: 3.5rem !important;
+  margin-bottom: 4.5rem !important;
   display: flex;
 }
-
-.answer-grade{
-display: flex;
-align-items: center;
-justify-items: start;
-flex-direction: row;
+.sub-title-main-view {
+  width: 50%;
+  margin-bottom: 2.5rem;
 }
 
-.answer-box-bar{
+.main-questionary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.buttons-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 90%;
+  padding-left: 5%;
+  margin-bottom: 1rem;
+}
+.complete-answer {
+  width: 100% !important;
+  display: flex !important;
+  justify-content: space-between !important;
+}
+
+.answer-grade {
+  display: flex;
+  align-items: center;
+  justify-items: start;
+  margin-bottom: 2rem;
+  flex-direction: row;
+}
+
+.answer-box-bar {
   display: flex;
   flex-direction: row;
 }
 
-.label-personalize-item{
+.label-personalize-item {
   font-size: 2rem;
-  font-weight: 600;
-  margin-left: .3rem;
+  font-weight: 800;
+  margin-left: 0.3rem;
 }
-.all-answers-box{
+.all-answers-box {
   display: flex;
+  margin-top: 1rem;
+  width: 100%;
+  align-items: center;
   flex-direction: column;
-  
 }
 @keyframes App-logo-spin {
   from {
